# youtube-srex

./: LICENSE  README.md  pyproject.toml
src/: main.py  withyoutubeapiv3.py
