[tool.poetry]
name = "youtube-srex"
version = "0.1.0"
description = ""
authors = ["loonip <vinstrtr@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
yt-dlp = "^2023.10.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
